--- a/actionplan.html
+++ b/actionplan.html
@@ -111,12 +111,10 @@ body, html {
   <p>Menghilangkan sumber penularan virus</p>
   <div class="w3-gray"> <p class="w3-text-white"> Peningkatan kesadaran masyarakat (public awareness)</p> </div>
 </div>
-</div>
-</div>
 
 <div class="w3-content w3-container w3-padding-64">
  <p>Source : </p> 
-  <a href="http://www.litbang.pertanian.go.id/info-aktual/221/" class="w3-bar-item w3-button w3-hover-black w3-hover-text-white" style="text-align: left;"> http://m.cnnindonesia.com/gaya-hidup/20170309113747-255-198940/flu-burung-masih-hantui-dunia/</a> </li>
+  <li><a href="http://www.litbang.pertanian.go.id/info-aktual/221/" class="w3-bar-item w3-button w3-hover-black w3-hover-text-white" style="text-align: left;"> http://m.cnnindonesia.com/gaya-hidup/20170309113747-255-198940/flu-burung-masih-hantui-dunia/</a> </li>
   </div>
 </div>
 </div>
