--- a/pengobatan.html
+++ b/pengobatan.html
@@ -125,6 +125,13 @@ body, html {
       <div class="w3-third">
         <p>6. Minum obat-obatan</p>
         <img src="obat2.jpg" class="w3-round" alt="obat" style="width:60%">
+       </div>
+  </div>
+</div>
+
+<div class="w3-container w3-center w3-padding-small">
+  <p>Source:</p><a href="https://www.alodokter.com/flu-burung" class="w3-bar-item w3-button w3-hover-black w3-hover-text-white"style="text-align: left;">https://www.alodokter.com/flu-burung</a>
+</div>
 
     </div>
     </div>
