--- a/gejala.html
+++ b/gejala.html
@@ -120,6 +120,21 @@ body, html {
 </div>
 </div>
 
+<div class="w3-container w3-center w3-padding-small">
+  <p>Link :</p><a href="https://www.dettol.co.id/illness-prevention/illnesses/bird-flu/" class="w3-bar-item w3-button w3-hover-black w3-hover-text-white"style="text-align: left;">https://www.dettol.co.id/illness-prevention/illnesses/bird-flu/</a>
+</div>
+
+
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+    </div>
+  </div>
+
+
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
